# django-react-docker-template

./: .env.example  .gitattributes  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: settings.py
frontend/: Dockerfile
