[tool.poetry]
name = "backend"
version = "0.1.2"
description = "This is a local development template repository for Django and React applications using Docker Compose."
authors = ["Logan Engle <loganengle.se@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
